2004/01/14 18:16 (-0500) muppetman

	* t/GnomePasswordDialog.t: GnomePasswordDialog and
	GnomeAuthenticationManager didn't appear until 2.3.6, use version
	guards to skip tests on older releases.

2003/12/31 11:45 (+0100) kaffeetisch

	* xs/BonoboDockItem.xs: Remove functions that weren't supposed to
	be bound in the first place (namely set_lock, detach, attach,
	unfloat, grab_pointer, drag_floating, handle_size_request,
	get_floating_position, and get_grip).  That also hushes compiler
	warnings.  Thanks to muppet for catching this.

2003/12/31 02:10 (-0500) muppetman

	more warnings fixes:

	* xs/GnomeApp.xs, xs/GnomeConfig.xs, xs/GnomeDruid.xs,
	xs/GnomeInit.xs, xs/GnomeModuleInfo.xs, xs/GnomeUIDefs.xs:
	don't let RETVAL be used uninitialized in alias switches.

	* xs/Gnome2.xs: mark ax unused in functions which don't touch the
	input stack, to hush compiler warnings

	* xs/GnomeScore.xs: return type on PPCODE xsubs must be void.

2003/12/29 16:32 (-0500) rwmcfa1

	* perl-Gnome2.spec.in: use the new DATE replacement in conjunction with
	VERSION to create the changlog on the fly, which is better.

2003/12/22 23:54 (-0500) muppetman

	* xs/GnomeConfig.xs: initialize variables to avoid 'may be used
	uninitialized' warnings in functions with alias switches.  it's not
	likely that we'll trigger them, but it's nice to shut them up.

2003/12/22 18:07 (-0500) rwmcfa1

	* Makefile.PL: removed a type-o do_pod_files.

2003/12/20 19:58 (+0100) kaffeetisch

	* t/GnomeConfig.t: Add a TODO comment about a bug in libgnome.

2003/12/19 18:18 (+0100) kaffeetisch

	* gnome2perl.h
	* xs/GnomeHelp.xs
	* xs/GnomeURL.xs: Rename SvGnomeCharArray to SvEnvArray and move
	it to Gnome2-VFS.

2003/12/18 22:13 (+0100) kaffeetisch

	* Gnome2.pm: Mention Gnome2::index.

2003/12/16 00:02 (+0100) kaffeetisch

	* xs/GnomeConfig.xs
	* xs/GnomeI18N.xs
	* xs/GnomeIconLookup.xs
	* xs/GnomeIconTheme.xs
	* xs/GnomeProgram.xs: Add API documentation.

2003/12/15 01:12 (+0100) kaffeetisch
