@@ -1,3 +1,10 @@
+2004/01/24 21:44 (-0500) rwmcfa1
+
+	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
+	trick
+	
+	* perl-Gnome2.spec.in: use pkg-config for Requires version
+
 2004/01/14 18:16 (-0500) muppetman
 
 	* t/GnomePasswordDialog.t: GnomePasswordDialog and
